# JucePluginTemplate

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  rename_project.sh
plugin/: CMakeLists.txt
plugin/WebUI/: index.html
plugin/WebUI/js/: app.js
plugin/include/: PluginProcessor.h
plugin/pluginTemplateCore/include/pluginTemplateCore/: DspProcessor.h
plugin/pluginTemplateCore/source/: DspProcessor.cpp
plugin/source/: PluginProcessor.cpp
pluginTemplate/: CMakeLists.txt
pluginTemplate/WebUI/: index.html
pluginTemplate/WebUI/js/: app.js  metering.js
pluginTemplate/include/: DynamicResourceProvider.h  ParameterIDs.h  PluginEditor.h  PluginProcessor.h  WebResourceHelper.h  WebUtils.h
pluginTemplate/pluginTemplateCore/: CMakeLists.txt
pluginTemplate/pluginTemplateCore/include/pluginTemplateCore/: DspProcessor.h  PeakLevelMeter.h
pluginTemplate/pluginTemplateCore/source/: DspProcessor.cpp  PeakLevelMeter.cpp
pluginTemplate/source/: PluginEditor.cpp  PluginProcessor.cpp
